--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start"    : "node ./bin/www",
+    "start"    : "node server.js",
     "start:dev": "set DEBUG= * & set NODE.ENV=development & node server.js"
   },
   "dependencies": {
